--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,18 +2,288 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    width: 320px
+    top: 30%
+    right: 15%
+    z-index: -1    
   &-2
-    animation: float1 2.8s ease-in-out infinite alternate
+    animation: float2 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
-
+    width: 400px
+    top: 35%
+    right: 10%
+    z-index: -1   
 
 @keyframes float1
-  0%
-    transform: translateY(20px)
+	0% 
+    transform: scale(1.1)
+ 
+	100% 
+    transform: scale(1.4)
 
+@keyframes float2
+	0% 
+		transform: translateX(-20px) rotate(5deg)
+ 
+	100% 
+		transform: translateX(50px)     
+
+@keyframes float3
+  0%
+    transform: scale(1.0)   
   100%
-    transform: translateY(0px)
+    transform: scale(1.1)  
+.banner-principal__img
+  width: 411px !important       
+  
+.banner-principal__img
+  z-index: 1    
+
+.banner-interno__fondo
+  background-image: url("../assets/curso/portada/3.png") !important
+
+.titulo-principal.color-acento-contenido .titulo-principal__numero span
+  color: white !important  
+
+.img-a 
+  display: block
+  margin: auto
+
+.img-t
+  width: auto
+  height: auto      
+
+.tarjeta--azul
+  background-color: #FEF1DE     
+
+.slyder-a__btn--sigt, .slyder-a__btn--atrs
+  @media (max-width: 810px)
+    width: 35px
+    height: 35px
+  @media (max-width: $bp-max-sm )
+    width: 25px
+    height: 25px  
+.slyder-a__bullets__item    
+  @media (max-width: 810px)
+    width: 10px
+    height: 10px  
+    margin: 0 3px   
+  @media (max-width: $bp-max-sm)
+    width: 10px
+    height: 10px  
+    margin: 0 3px        
+
+.slyder-a
+  &__tipo-a
+    .slyder-a
+      &__bullets
+        position: absolute
+        bottom: 20px !important
+        left: 50%
+        transform: translateX(-50%)            
+
+.slyder-a__bullets__item--active
+  background-color: #26C7DB !important
+  border: 1px solid #26C7DB
+.slyder-a__btn--sigt, .slyder-a__btn--atrs
+  background-color: #26C7DB
+.slyder-a__bullets__item
+  background-color: #B2E2DC
+  border: 1px solid #B2E2DC  
+
+.cajon.color-primario
+  background-color: #FFE9C9
+
+.acordion
+  .tarjeta.bg6
+    background-color: white
+    border-bottom: 1px solid #f6f6f6
+
+.tarjeta.bg6.acordion__activo
+  background-color: #DEF7FA !important 
+
+.acordion__accion__btn--b 
+  background-color: #FED935 !important 
+  border: 1px solid #FED935   
+
+.crd--avatarHorizontal
+  position: relative
+  padding-right: 12rem
+  & > *
+    position: relative
+  h5 
+    color: $color-sistema-texto
+  p 
+    margin-bottom: 0
+  &::before  
+    position: absolute 
+    content: ''
+    top: 0
+    right: 0
+    width: calc( 100% - 60px)
+    height: 100%
+    background-color: #FEF7F3
+
+  @media (max-width: 1000px)
+    padding-right: 2rem
+
+.crd--first
+  &::before 
+    background-color: #B3EBF2 !important
+.crd--last
+  &::before 
+    background-color: #FEEC98 !important   
+.crd--med1
+  &::before 
+    background-color: #FEEC98 !important 
+.crd--med2
+  &::before 
+    background-color: #B3EBF2 !important          
+
+.crd--first
+  &::before 
+    border-top-left-radius: 30px
+.crd--last
+  &::before 
+    border-bottom-left-radius: 30px
+
+.avatar
+  position: absolute
+  bottom: 0
+  right: -6rem
+  width: 260px
+  z-index: 1
+  @media (max-width: 1000px)
+    display: none  
+
+.tabs-c__tab--active
+  font-weight: bold            
+
+.bg1
+  border: 2px solid #F57C22
+  border-radius: 0 20px 20px 0
+  @media ( max-width: 900px )
+    border-radius: 20px
+.colorv
+  color: #F57C22 !important    
+
+.img-m
+  @media( max-width: 900px)
+    border-radius: 20px  
+    display: block
+    margin: auto    
+
+.tabs-b__tab
+  filter: opacity(70%)    
+
+.tabs-b.color-acento-contenido .tabs-b__tab--active
+  filter: grayscale(0) !important  
+
+.tarjeta .color-acento-contenido--borde 
+  background-color: #FEF1DE
+.tabs-a__tab 
+  background-color: #FED935
+
+.img-infografica__card
+  z-index: -1
+
+.img-infografica__card--selected
+  z-index: 1          
+
+.tarjeta.color-acento-botones 
+  background-color: #84D5DF  
+
+.bg2
+  border: 2px solid #F57C22
+  border-radius: 20px 0 0 20px
+  @media ( max-width: 900px )
+    border-radius: 20px  
+
+.crd_hover_txt
+  position: relative  
+  padding: 0 !important
+  overflow: hidden !important  
+  &:hover    
+    .crd_hover_txt--body   
+      transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1) 
+      transform: translateY(0)
+
+  .crd_hover_txt--body
+    position: absolute
+    padding: 1.5rem
+    bottom: 0    
+    transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1)
+    transform: translateY(calc( 100% - 4.1rem ))
+    background-image: url(../assets/curso/temas/43.png)
+    background-position: center center
+    background-repeat: no-repeat
+    background-size: cover 
+  
+  @media (min-width:1200px) and (max-width:1400px)  
+    .crd_hover_txt--body
+      p
+        font-size: 0.85em 
+
+.tarjeta .color-acento-contenido--borde 
+  background-color: #FEF1DE
+.tabs-a__tab 
+  background-color: #FED935
+
+.linea-tiempo-d
+  &__item
+    &--selected
+      .linea-tiempo-d
+        &__item
+          &__content
+            background-color: #FFF6CC !important
+            &__title
+              font-weight: $base-bold-font-weight
+          &__number
+            font-weight: $base-bold-font-weight
+    &__col-number
+      display: flex
+      flex-direction: column
+
+    &__dots
+      flex: 1
+      display: flex
+      justify-content: center
+      padding: 5px 0
+      &:after
+        content: ''
+        display: block
+        width: 0
+        height: 100%
+        border-left: 5px dotted $color-sistema-e
+    &__number
+      display: flex
+      align-items: center
+      justify-content: center
+      min-width: 40px
+      height: 40px
+      cursor: pointer
+      transition: background-color .3s ease-in-out, color .3s ease-in-out
+    &__content
+      background-color: #FED935 !important     
+      &__title
+        display: flex
+        align-items: center
+        height: 40px
+        cursor: pointer
+        &:hover
+          font-weight: $base-bold-font-weight
+      &__slot
+        overflow: hidden
+        transition: height .5s ease-in-out
+  .tarjeta
+    border-radius: 5px
+.linea-tiempo-d.color-primario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+  background-color: #FFF6CC !important
+  color: #12263F
+  
+.linea-tiempo-d__item__number
+  background-color: #FED935 !important
+
+@media (max-width: 412px)
+  .linea-tiempo-d__item__content__title 
+    height: 85px !important    
