--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -150,8 +150,8 @@
 .avatar
   position: absolute
   bottom: 0
-  right: -6rem
-  width: 260px
+  right: -4rem
+  width: 230px
   z-index: 1
   @media (max-width: 1000px)
     display: none  
@@ -287,3 +287,6 @@
 @media (max-width: 412px)
   .linea-tiempo-d__item__content__title 
     height: 85px !important    
+
+.img-h
+  transform: scaleX(-1) !important   
