--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -290,3 +290,14 @@
 
 .img-h
   transform: scaleX(-1) !important   
+
+.bga1
+  background-color: #FEEC98
+  border-radius: 20px 20px 0 0   
+
+.bga2
+  background-color: #B3EBF2
+  border-radius: 0 0 20px 20px     
+
+.img-infografica__card, .img-infografica-b__card
+  width: 650px !important  
